[package]
name = "flox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9"
lazy_static = "1.4"
rustyline = "12.0"
rand = "0.8"
colored = "2.0.4"
clap = { version = "4.4.4", features = ["derive"] }
itertools = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.18.0"
rayon = "1.8"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "main"
